--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@meronex/icons": "^4.0.0",
+    "@sanity/image-url": "^1.0.1",
     "next": "12.3.1",
     "next-sanity": "^0.8.4",
     "react": "18.2.0",
