--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "autoprefixer": "^10.4.12",
     "eslint": "8.24.0",
     "eslint-config-next": "12.3.1",
+    "eslint-plugin-react": "^7.31.10",
     "postcss": "^8.4.16",
     "tailwindcss": "^3.1.8"
   }
