--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@meronex/icons": "^4.0.0",
     "@sanity/image-url": "^1.0.1",
+    "eslint-plugin-prettier": "^4.2.1",
     "next": "12.3.1",
     "next-sanity": "^0.8.4",
     "react": "18.2.0",
@@ -21,7 +22,6 @@
     "autoprefixer": "^10.4.12",
     "eslint": "^8.24.0",
     "eslint-config-next": "12.3.1",
-    "eslint-plugin-react": "^7.31.10",
     "postcss": "^8.4.16",
     "tailwindcss": "^3.1.8"
   }
